--- a/index.html
+++ b/index.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Mia Campagna di D&D</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f0f0f0;
             color: #333;
-            text-align: center;
+            margin: 0;
+            padding: 0;
         }
 
-        h1 {
-            color: #6600cc;
+        #header {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1;
+        }
+
+        #tasti {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin-top: 50px;
         }
 
         .bottone {
-            display: inline-block;
             padding: 10px 20px;
-            margin: 10px;
             background-color: #4CAF50;
             color: white;
             text-decoration: none;
@@ -26,7 +41,22 @@
             cursor: pointer;
         }
 
-        #sezione1, #sezione2, #sezione3 {
+        #contenuto {
+            margin-top: 120px;
+            padding: 20px;
+        }
+
+        #dettagli {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        .sezione {
             display: none;
         }
 
@@ -36,33 +66,41 @@
     </style>
 </head>
 <body>
-    <h1>Benvenuti alla Campagna di D&D</h1>
-
-    <a href="#" class="bottone" onclick="mostraSezione('sezione1')">Mostra Sezione 1</a>
-    <a href="#" class="bottone" onclick="mostraSezione('sezione2')">Mostra Sezione 2</a>
-    <a href="#" class="bottone" onclick="mostraSezione('sezione3')">Mostra Sezione 3</a>
-
-    <div id="sezione1">
-        <h2>Sezione 1</h2>
-        <p>Contenuto della Sezione 1...</p>
+    <div id="header">
+        <h1>La Mia Campagna di D&D</h1>
     </div>
 
-    <div id="sezione2">
-        <h2>Sezione 2</h2>
-        <p>Contenuto della Sezione 2...</p>
+    <div id="tasti">
+        <a href="#" class="bottone" onclick="mostraSezione('sezione1')">Sezione 1</a>
+        <a href="#" class="bottone" onclick="mostraSezione('sezione2')">Sezione 2</a>
+        <a href="#" class="bottone" onclick="mostraSezione('sezione3')">Sezione 3</a>
     </div>
 
-    <div id="sezione3">
-        <h2>Sezione 3</h2>
-        <p>Contenuto della Sezione 3...</p>
+    <div id="contenuto">
+        <div id="sezione1" class="sezione">
+            <h2>Sezione 1</h2>
+            <p>Contenuto della Sezione 1...</p>
+        </div>
+
+        <div id="sezione2" class="sezione">
+            <h2>Sezione 2</h2>
+            <p>Contenuto della Sezione 2...</p>
+        </div>
+
+        <div id="sezione3" class="sezione">
+            <h2>Sezione 3</h2>
+            <p>Contenuto della Sezione 3...</p>
+        </div>
+    </div>
+
+    <div id="dettagli">
+        <p>Dettagli extra qui...</p>
     </div>
 
     <script>
         function mostraSezione(idSezione) {
             // Nascondi tutte le sezioni
-            document.getElementById('sezione1').style.display = 'none';
-            document.getElementById('sezione2').style.display = 'none';
-            document.getElementById('sezione3').style.display = 'none';
+            document.querySelectorAll('.sezione').forEach(sezione => sezione.style.display = 'none');
 
             // Mostra solo la sezione selezionata
             document.getElementById(idSezione).style.display = 'block';
@@ -70,3 +108,4 @@
     </script>
 </body>
 </html>
+
