--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            margin-top: 50px;
+            margin-top: 40px;
         }
 
         .bottone {
@@ -71,9 +71,9 @@
     </div>
 
     <div id="tasti">
-        <a href="#" class="bottone" onclick="mostraSezione('sezione1')">Sezione 1</a>
-        <a href="#" class="bottone" onclick="mostraSezione('sezione2')">Sezione 2</a>
-        <a href="#" class="bottone" onclick="mostraSezione('sezione3')">Sezione 3</a>
+        <div class="bottone" onclick="mostraSezione('sezione1')">Sezione 1</div>
+        <div class="bottone" onclick="mostraSezione('sezione2')">Sezione 2</div>
+        <div class="bottone" onclick="mostraSezione('sezione3')">Sezione 3</div>
     </div>
 
     <div id="contenuto">
@@ -108,4 +108,3 @@
     </script>
 </body>
 </html>
-
