--- a/index.html
+++ b/index.html
@@ -25,21 +25,26 @@
         }
 
         #tasti {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            margin-top: 40px;
-        }
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			position: fixed;
+			width: 100%;
+			top: 59px;
+			background-color: transparent;
+			z-index: 2;
+		}
 
-        .bottone {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            text-decoration: none;
-            font-size: 18px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+		.bottone {
+			padding: 10px 20px;
+			background-color: #333;
+			color: white;
+			text-decoration: none;
+			font-size: 18px;
+			border-radius: 0;
+			cursor: pointer;
+			margin-right: 0;
+		}
 
         #contenuto {
             margin-top: 120px;
@@ -63,23 +68,41 @@
         .mostra {
             display: block;
         }
+
+        .missione {
+            margin-bottom: 20px;
+        }
+
+        #freccia-indietro, #freccia-avanti {
+            font-size: 24px;
+            margin: 0 10px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <div id="header">
-        <h1>La Mia Campagna di D&D</h1>
+        <h1>Alleanza Dei Lord</h1>
     </div>
 
     <div id="tasti">
-        <div class="bottone" onclick="mostraSezione('sezione1')">Sezione 1</div>
-        <div class="bottone" onclick="mostraSezione('sezione2')">Sezione 2</div>
-        <div class="bottone" onclick="mostraSezione('sezione3')">Sezione 3</div>
+        <a href="#" class="bottone" onclick="mostraSezione('sezione1')">Elenco Missioni</a>
+        <a href="#" class="bottone" onclick="mostraSezione('sezione2')">Sezione 2</a>
+        <a href="#" class="bottone" onclick="mostraSezione('sezione3')">Sezione 3</a>
     </div>
 
     <div id="contenuto">
         <div id="sezione1" class="sezione">
-            <h2>Sezione 1</h2>
-            <p>Contenuto della Sezione 1...</p>
+			<div id="header">
+				<h1>Elenco Missioni</h1>
+			</div>
+            <title>Elenco Missioni</title>
+            <div id="missioni-container"></div>
+            <div id="paginazione-container">
+                <button id="freccia-indietro" onclick="cambiaPagina(paginaCorrente - 1)" disabled>-</button>
+				<span id="pagine">1</span> <!-- Pagina corrente -->
+				<button id="freccia-avanti" onclick="cambiaPagina(paginaCorrente + 1)" disabled>+</button>
+            </div>
         </div>
 
         <div id="sezione2" class="sezione">
@@ -94,17 +117,120 @@
     </div>
 
     <div id="dettagli">
-        <p>Dettagli extra qui...</p>
+        <!-- Dettagli aggiuntivi, se necessario -->
     </div>
 
     <script>
-        function mostraSezione(idSezione) {
-            // Nascondi tutte le sezioni
-            document.querySelectorAll('.sezione').forEach(sezione => sezione.style.display = 'none');
+        var missioniPerPage = 1;
+        var paginaCorrente = 1;
+        var missioni;
 
-            // Mostra solo la sezione selezionata
-            document.getElementById(idSezione).style.display = 'block';
+        // Funzione per generare il codice HTML delle missioni in base alla pagina corrente
+        function generaCodiceHTMLMissioni() {
+            var codiceHTML = "";
+
+            var inizio = (paginaCorrente - 1) * missioniPerPage;
+            var fine = inizio + missioniPerPage;
+
+            var missioniVisualizzate = missioni.slice(inizio, fine);
+
+            missioniVisualizzate.forEach(function(missione) {
+                codiceHTML += "<div class='missione'>";
+                codiceHTML += "<h1 style='" + (missione.urgente === 1 ? "color: red;" : "") + "'>" + missione.titolo + "</h1>";
+                codiceHTML += "<p>" + missione.corpo + "</p>";
+                
+				codiceHTML += "<h2>Ricompensa</h2>";
+				codiceHTML += "<p>Ricompensa base: " + missione.ricompensa.base + " GP</p>";
+
+				var extraNames = missione.ricompensa["extra names"];
+				var extraGP = missione.ricompensa.extraGP;
+
+				if (Array.isArray(extraNames) && Array.isArray(extraGP) && extraNames.length > 0 && extraNames.length === extraGP.length) {
+					codiceHTML += "<h2>Extra</h2>";
+					codiceHTML += "<ul>";
+
+					for (var i = 0; i < extraNames.length; i++) {
+						codiceHTML += "<li>" + extraNames[i] + ": " + extraGP[i] + " GP</li>";
+					}
+
+					codiceHTML += "</ul>";
+				}
+
+				codiceHTML += "<h2>Conclusione</h2>";
+				codiceHTML += "<p>" + missione.conclusione.corpo + "</p>";
+				codiceHTML += "<p>" + missione.conclusione.tempi + "</p>";
+
+                codiceHTML += "</div>";
+            });
+
+            return codiceHTML;
         }
+
+        // Funzione per generare il codice HTML della paginazione
+        function generaCodiceHTMLPaginazione() {
+            var numeroPagine = Math.ceil(missioni.length / missioniPerPage);
+            var codiceHTML = "";
+
+            for (var i = 1; i <= numeroPagine; i++) {
+                codiceHTML += "<span class='pagina' onclick='cambiaPagina(" + i + ")'>" + i;
+				if(i < numeroPagine) {
+					codiceHTML += ", ";
+				} else {
+					codiceHTML += ".";
+				}
+				codiceHTML += "</span>";
+            }
+
+            return codiceHTML;
+        }
+
+        // Funzione per cambiare la pagina delle missioni
+        function cambiaPagina(pagina) {
+            paginaCorrente = pagina;
+            aggiornaVisualizzazioneMissioni();
+        }
+
+        // Funzione per aggiornare la visualizzazione delle missioni e della paginazione
+        function aggiornaVisualizzazioneMissioni() {
+            var codiceHTMLMissioni = generaCodiceHTMLMissioni();
+            var codiceHTMLPaginazione = generaCodiceHTMLPaginazione();
+
+            document.getElementById("missioni-container").innerHTML = codiceHTMLMissioni;
+            document.getElementById("paginazione-container").innerHTML = codiceHTMLPaginazione;
+        }
+		
+		 function mostraSezione(idSezione) {
+			// Nascondi tutte le sezioni
+			document.querySelectorAll('.sezione').forEach(sezione => sezione.style.display = 'none');
+
+			// Mostra solo la sezione selezionata
+			document.getElementById(idSezione).style.display = 'block';
+		}
+
+        // Funzione per caricare e visualizzare le missioni
+        function caricaEMostraMissioni() {
+            // Effettua una richiesta AJAX per caricare il file JSON delle missioni
+            var xhr = new XMLHttpRequest();
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState == 4) {
+                    if (xhr.status == 200) {
+                        // Parsifica il JSON e aggiorna la visualizzazione delle missioni
+                        missioni = JSON.parse(xhr.responseText);
+                        aggiornaVisualizzazioneMissioni();
+                    } else {
+                        // Se c'è un errore nel caricamento del JSON, mostra un messaggio appropriato
+                        document.getElementById("missioni-container").innerHTML = "<h3>Al momento non ci sono missioni</h3><p>Sembra che l'alleanza stia svolgendo un ottimo lavoro!</p>";
+                    }
+                }
+            };
+            xhr.open("GET", "missioni.json", true);
+            xhr.send();
+        }
+
+        // Chiamata alla funzione per caricare e visualizzare le missioni al caricamento della pagina
+        window.onload = caricaEMostraMissioni;
+
+        // ... (altre funzioni JavaScript, se necessario) ...
     </script>
 </body>
 </html>
