--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <title>Elenco Missioni</title>
             <div id="missioni-container"></div>
             <div id="paginazione-container">
-                <button id="freccia-indietro" onclick="cambiaPagina(paginaCorrente - 1)" disabled>-</button>
+                <button id="freccia-indietro" onclick="cambiaPagina(paginaCorrente - 1)">-</button>
 				<span id="pagine">1</span> <!-- Pagina corrente -->
-				<button id="freccia-avanti" onclick="cambiaPagina(paginaCorrente + 1)" disabled>+</button>
+				<button id="freccia-avanti" onclick="cambiaPagina(paginaCorrente + 1)">+</button>
             </div>
         </div>
 
