--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
             var numeroPagine = Math.ceil(missioni.length / missioniPerPage);
             var codiceHTML = "";
 
+	    codiceHTML += "<button id="freccia-indietro" onclick='cambiaPagina(paginaCorrente - 1)'>-</button>"
+
             for (var i = 1; i <= numeroPagine; i++) {
                 codiceHTML += "<span class='pagina' onclick='cambiaPagina(" + i + ")'>" + i;
 				if(i < numeroPagine) {
@@ -180,6 +182,7 @@
 				}
 				codiceHTML += "</span>";
             }
+	    codiceHTML += "<button id="freccia-indietro" onclick='cambiaPagina(paginaCorrente + 1)'>+</button>"
 
             return codiceHTML;
         }
