--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				}
 				codiceHTML += "</span>";
             }
-	    codiceHTML += "<button id="freccia-indietro" onclick='cambiaPagina(paginaCorrente + 1)'>+</button>"
+	    codiceHTML += "<button id="freccia-avanti" onclick='cambiaPagina(paginaCorrente + 1)'>+</button>"
 
             return codiceHTML;
         }
