--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
         <div id="sezione2" class="sezione">
             <h1>Timeline</h1>
     		<div id="timeline">
-        		<!-- Qui andrà la linea temporale -->
+        		<div class="event" style="top: 20%;">Evento 1</div>
+    			<div class="event" style="top: 40%;">Evento 2</div>
+    			<!-- Altri eventi -->
     		</div>
         </div>
 
