--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
     		border-radius: 50%; /* Per rendere l'evento circolare */
 		}
 
+		.year-divider {
+    		position: absolute;
+    		left: 0;
+    		width: 100%;
+    		height: 1px; /* Spessore della divisione */
+    		background-color: #000; /* Colore della divisione */
+    		color: #000; /* Colore del testo */
+    		font-size: 12px; /* Dimensione del testo */
+    		text-align: center; /* Allineamento del testo al centro */
+    		line-height: 1.5; /* Altezza riga del testo */
+		}
+
     </style>
 </head>
 <body>
@@ -279,6 +291,15 @@
         // Chiamata alla funzione per caricare e visualizzare le missioni al caricamento della pagina
         window.onload = caricaEMostraMissioni;
 
+		window.onload = function() {
+            var timelineDiv = document.getElementById("timeline");
+            for (var year = 0; year <= 1358; year++) {
+                var yearDiv = document.createElement("div");
+                yearDiv.className = "year-divider";
+                yearDiv.textContent = year;
+                timelineDiv.appendChild(yearDiv);
+            }
+        };
         // ... (altre funzioni JavaScript, se necessario) ...
     </script>
 </body>
