--- a/index.html
+++ b/index.html
@@ -155,10 +155,11 @@
 
         <div id="sezione2" class="sezione">
             <h1>Timeline</h1>
-    		<div id="timeline">
-        		<div class="event" style="top: 20%;">Evento 1</div>
-    			<div class="event" style="top: 40%;">Evento 2</div>
-    			<!-- Altri eventi -->
+        	<div id="timeline"></div>
+        	<div id="years"></div>
+        	<div class="event" style="top: 20%;">Evento 1</div>
+    		<div class="event" style="top: 40%;">Evento 2</div>
+    		<!-- Altri eventi -->
     		</div>
         </div>
 
