--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="history.html">Raccolta delle Cronache</a></li>
-                    <li><a href="quest.html">Bacheca Mission</a></li>
+                    <li><a href="quest.html">Bacheca Missioni</a></li>
                     <li><a href="minigame.html">&#8203;&#8203;&#8203;</a></li>
                 </ul>
             </nav>
