--- a/quest.html
+++ b/quest.html
@@ -43,6 +43,7 @@
     <footer>
         <p>&copy; 2024 La tua campagna D&D</p>
     </footer>
-    <script src="scripts.js"></script>
 </body>
+<script src="menu.js"></script>
+<script src="quest.js"></script>
 </html>
