--- a/minigame.html
+++ b/minigame.html
@@ -25,7 +25,7 @@
             <h1>Stanza Segreta</h1>
         </header>
         <hr>
-	<h3>Hai trovato la stanza segreta, 🤫 non farne parola con nessuno! Fammi sapere che hai trovato questa stanza dicendomi "pecore verdi saltellanti nel covo dell'alleanza" e avrai diritto a ritirare un dado quando vuoi, per esercitare il tuo diritto a ritirare il dado ti basterà dire ad alta voce (in modo che io possa sentirlo).</h3>
+	<h3>Hai trovato la stanza segreta, 🤫 non farne parola con nessuno! Fammi sapere che hai trovato questa stanza dicendomi "pecore verdi saltellanti nel covo dell'alleanza" e avrai diritto a ritirare un dado quando vuoi, per esercitare il tuo diritto a ritirare il dado ti basterà dire ad alta voce (in modo che tutti possano sentirlo).</h3>
         <blockquote>
             <p>"IO POTENTE ESSERE DIVINO, QUI E OGGI, ESIGO DI RITIRARE QUESTO DADO IN NOME DEL SACRO PATTO"</p>
         </blockquote>
