--- a/history.html
+++ b/history.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Robe che sono successe in ordine cronologico:</title>
+        <title>Cronache dell'Alleanza</title>
         <link rel="stylesheet" href="history.css">
         <link rel="stylesheet" href="menu.css">
         <link rel="stylesheet" href="baseStyle.css">
@@ -22,7 +22,7 @@
             </nav>
         </div>
         <header>
-            <h1>Robe che sono successe in ordine cronologico</h1>
+            <h1>Raccolta delle cronache</h1>
         </header>
         <hr>
         <blockquote>
