--- a/quest.html
+++ b/quest.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="quest.css">
     <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="baseStyle.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
