--- a/quest.html
+++ b/quest.html
@@ -6,8 +6,9 @@
     <title>Bacheca Missioni dell'Alleanza</title>
     <link rel="stylesheet" href="quest.css">
     <link rel="stylesheet" href="menu.css">
-    <link rel="stylesheet" href="baseStyle.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Milton+One&display=swap">
+    <link rel="stylesheet" href="baseStyle.css"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
